force-app/main/default/objects/Aircraft__c/fields/Aircraft_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Case_Status__c</fullName>
    <formula>IF(  Number_Of_NoActions__c  > 0 , IMAGE("/resource/OrangeCase","",20,20) + ' ',IMAGE("/resource/WhiteCase","",20,20))&amp; 

IF(  Number_Of_Blocks__c  > 0 , IMAGE("/resource/RedCase","",20,20) + ' ', IMAGE("/resource/WhiteCase","",20,20))&amp; 

IF(  Number_Of_Malfunctions__c  > 0 , IMAGE("/resource/YellowCase","",20,20) + ' ',IMAGE("/resource/WhiteCase","",20,20))&amp; 

IF(  Number_Of_Serviceables__c  > 0, IMAGE("/resource/BlueCase","",20,20) + ' ',IMAGE("/resource/WhiteCase","",20,20))</formula>
    <label>Aircraft Case Status</label>
    <type>Text</type>
</CustomField>