force-app/main/default/objects/Aircraft__c/fields/Aircraft_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Configuration__c</fullName>
    <label>A/C CONF.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>