force-app/main/default/objects/Aircraft__c/fields/Aircraft_Description__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Description__c</fullName>
    <label>A/C Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>