force-app/main/default/objects/Aircraft__c/fields/Aircraft_Main_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Main_Type__c</fullName>
    <label>Aircraft Main Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>