force-app/main/default/objects/Aircraft__c/fields/Aircraft_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Name_EN__c</fullName>
    <label>A/C Name EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>