force-app/main/default/objects/Aircraft__c/fields/Aircraft_Registration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Registration__c</fullName>
    <externalId>true</externalId>
    <label>Aircraft Registration</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>