force-app/main/default/objects/Aircraft__c/fields/Aircraft_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Sub_Type__c</fullName>
    <label>Aircraft Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>