force-app/main/default/objects/Aircraft__c/fields/Cabin_Duty__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Duty__c</fullName>
    <description>The role of an air cabin crew member is to provide excellent customer service to passengers while ensuring their comfort and safety throughout the flight.</description>
    <label>Cabin Duty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>