force-app/main/default/objects/Aircraft__c/fields/Cabin_Ver__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Ver__c</fullName>
    <label>Cabin Ver.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>