force-app/main/default/objects/Aircraft__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <label>Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>