force-app/main/default/objects/Aircraft__c/fields/DEP_STN__c.field-meta.xml
<CustomField>
    <fullName>DEP_STN__c</fullName>
    <label>DEP STN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>