force-app/main/default/objects/Aircraft__c/fields/Is_LOPA_Ready__c.field-meta.xml
<CustomField>
    <fullName>Is_LOPA_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify that LOPA is ready for this aircraft.</description>
    <label>Is LOPA Ready</label>
    <type>Checkbox</type>
</CustomField>