force-app/main/default/objects/Aircraft__c/fields/Line_no__c.field-meta.xml
<CustomField>
    <fullName>Line_no__c</fullName>
    <label>Line no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>