force-app/main/default/objects/Aircraft__c/fields/LOPA_Economy_Class__c.field-meta.xml
<CustomField>
    <fullName>LOPA_Economy_Class__c</fullName>
    <label>LOPA Economy Class</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>