force-app/main/default/objects/Aircraft__c/fields/Msn__c.field-meta.xml
<CustomField>
    <fullName>Msn__c</fullName>
    <label>Msn.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>