force-app/main/default/objects/Aircraft__c/fields/Number_Of_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Blocks__c</fullName>
    <description>Displays the number of cases with action being blocked</description>
    <label>Number Of Blocks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>