force-app/main/default/objects/Aircraft__c/fields/Number_Of_NoActions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_NoActions__c</fullName>
    <description>Displays the number of cases with no action</description>
    <label>Number Of NoActions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>