force-app/main/default/objects/Aircraft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Aircraft_Name_EN__c</columns>
    <columns>Cabin_Duty__c</columns>
    <columns>Msn__c</columns>
    <columns>Cabin_Ver__c</columns>
    <columns>Delivery__c</columns>
    <columns>Aircraft_Description__c</columns>
    <columns>Aircraft_Configuration__c</columns>
    <columns>Aircraft_Type__c</columns>
    <columns>Aircraft_Main_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>